--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -5,7 +5,8 @@
   gap: 2rem;
 }
 
-.form input[type='text'] {
+.form input[type='text'],
+.form select {
   padding: 1rem;
   background-color: transparent;
   border: 0.3rem solid var(--white);
@@ -13,4 +14,24 @@
   font-size: 1.8rem;
   font-weight: 400;
   border-radius: 1rem;
+}
+
+.form select option {
+  color: black;
+  background-color: grey;
+}
+
+.field ::placeholder {
+  color: var(--white);
+}
+
+.submit {
+  background-color: var(--primary);
+  border: none;
+  color: var(--white);
+  font-weight: 700;
+  font-size: 1.4rem;
+  text-transform: uppercase;
+  cursor: pointer;
+  padding: 1rem;
 }
